--- a/src/mpi/Makefile
+++ b/src/mpi/Makefile
@@ -1,10 +1,8 @@
 # Makefile for MPI version of ADDA package
 # Most options are defined in Makefile
-# $Author$
 # $Date::                            $
 #
-# Copyright (C) 2006-2008 University of Amsterdam
-# Copyright (C) 2009,2010 Institute of Chemical Kinetics and Combustion & University of Amsterdam
+# Copyright (C) 2006-2011 ADDA contributors
 # This file is part of ADDA.
 #
 # ADDA is free software: you can redistribute it and/or modify it under the terms of the GNU
