Alternative way of handling cl sources was added (currently this applies only to oclkernels.cl). They are stringified during compile time, by transforming them in a C string that is put in a separate file. This file (.clstr) is then included in the C source as a static string. So the final binaries do not require .cl files to run properly. Makefiles were updated to make this process completely automatic. This way of handling cl sources is now the default one, but can be changed by define READ_CL_SOURCE_AT_RUNTIME in oclcore.c. The large static strings produce non-significant warning during compilation, which will be taken care of afterwards.
Concerning the older alternative, reading mode for file with ocl kernels was changed to binary. This should be more robust. Also fclose() was added.

Minor changes in param.h, oclkernels.cl, and const.h/

--- a/src/Makefile
+++ b/src/Makefile
@@ -366,7 +366,7 @@ endif
 #===================================================================================================
 
 .EXPORT_ALL_VARIABLES:
-.PHONY: seq mpi all clean cleanseq cleanmpi ocl
+.PHONY: seq mpi ocl all clean cleanseq cleanmpi cleanocl
 
 all: seq mpi ocl
 
@@ -397,4 +397,4 @@ cleanmpi:
 
 cleanocl:
 	@echo "Removing OpenCL compiled files"
-	cd $(OCL) && rm -f *.o *.d $(OPTSFILES) $(PROGOCL) $(PROGOCL).exe
+	cd $(OCL) && rm -f *.o *.d $(OPTSFILES) $(PROGOCL) $(PROGOCL).exe *.clstr
