Update for misc/near_field package:
The default compiler is now gfortran. In combination with newer version of MPICH, all previous warnings disappeared in Windows compilation. Therefore Windows executables were updated - Fixes issue 104. 

All test scripts were updated to automatically locate ADDA executable in src/seq folder if $ADDABIN is not set. A few other minor changes to scripts and the manual.

svn properties have been set for files throughout the package.

Another minor update - eol-style for win32/README was set to (always) Windows to make the producing of win32 packages on other systems more reliable.

--- a/misc/near_field/Makefile
+++ b/misc/near_field/Makefile
@@ -1,11 +1,11 @@
 # Makefile for Near Field tools
 
 # ---- Intel Fortran Compiler Linux
-FC     = ifort
-FFLAGS = -warn all -O3 
-MPIFC  = mpif90
-LIBS   =
-MPILIBS= -L/opt/hpmpi/lib/linux_64 -lmpi
+#FC     = ifort
+#FFLAGS = -warn all -O3
+#MPIFC  = mpif90
+#LIBS   =
+#MPILIBS= -L/opt/hpmpi/lib/linux_64 -lmpi
 
 # ----- HP-UX
 #FC      = f90
@@ -14,12 +14,14 @@ MPILIBS= -L/opt/hpmpi/lib/linux_64 -lmpi
 #LIBS    =
 #MPILIBS =  -L/opt/mpi/lib/hpux64/ -lmpio
 
-# ---- Windows (MinGW) with MPICH
-#FC     = g95
-#FFLAGS = -O
-#MPIFC  = $(FC)
-#LIBS   =
-#MPILIBS= -L"C:/Program Files/MPICH2/lib" -I"C:/Program Files/MPICH2/include" -lfmpich2g
+# ---- GNU Fortran Compiler
+FC     = gfortran
+FFLAGS = -O3 -ffast-math -funroll-loops
+MPIFC  = $(FC)
+LIBS   =
+MPILIBS= -lfmpich2g
+# You might need something like the following on Windows (with MinGW)
+MPILIBS+=  -L"C:/Program Files/MPICH2/lib" -I"C:/Program Files/MPICH2/include"
 
 ALLPROGS = gendip genplane genline nearfield checknfsymm
 
